--- a/public/platform-config.json
+++ b/public/platform-config.json
@@ -1,6 +1,6 @@
 {
   "Version": "6.0.0",
-  "Title": "PureAdmin",
+  "Title": "Love❤施沁玥",
   "FixedHeader": true,
   "HiddenSideBar": false,
   "MultiTagsCache": false,
@@ -11,7 +11,7 @@
   "OverallStyle": "light",
   "Grey": false,
   "Weak": false,
-  "HideTabs": false,
+  "HideTabs": true,
   "HideFooter": false,
   "Stretch": false,
   "SidebarStatus": true,
