--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "path-browserify": "^1.0.1",
     "pinia": "^3.0.2",
     "pinyin-pro": "^3.26.0",
+    "qrcode": "^1.5.4",
     "qs": "^6.14.0",
     "responsive-storage": "^2.2.0",
     "sortablejs": "^1.15.6",
