--- a/tsconfig.json
+++ b/tsconfig.json
@@ -47,7 +47,7 @@
     "src/**/*.vue",
     "types/*.d.ts",
     "vite.config.ts"
-  ],
+, "src/views/welcome/component.js"  ],
   "exclude": [
     "dist",
     "**/*.js",
