--- a/package.json
+++ b/package.json
@@ -58,8 +58,10 @@
     "@pureadmin/utils": "^2.6.0",
     "@vueuse/core": "^13.1.0",
     "@vueuse/motion": "^3.0.3",
+    "ali-oss": "^6.23.0",
     "animate.css": "^4.1.1",
     "axios": "^1.9.0",
+    "crypto-js": "^4.2.0",
     "dayjs": "^1.11.13",
     "echarts": "^5.6.0",
     "element-plus": "^2.9.8",
